<!--
  ~ /*
  ~  * Created by https://github.com/braver-tool on 12/10/21, 08:30 PM
  ~  * Copyright (c) 2021 . All rights reserved.
  ~  * Last modified 15/11/21, 05:50 PM
  ~  */
  -->

<resources>
    <string name="app_name">FilePicker</string>
    <string name="image_desc">images</string>
    <string name="app_title"><u>File Picker</u></string>
    <string name="app_title_camera">Camera</string>
    <string name="app_title_gallery">Gallery</string>
    <string name="app_title_doc">Documents</string>
    <string name="btn_preview">Click to Preview</string>

    <!-- for permission alert-->
    <string name="settings_permission">Settings</string>
    <string name="camera_video_permission">To capture photos and videos, allow FilePicker access to your camera.\nTap Settings > Permissions, and turn Camera on.</string>
    <string name="storage_permission">To send media, allow FilePicker access to your device photos, media, and files.\nTap Settings > Permissions, and "Files and media" on.</string>
    <string name="call_permission">To call, allow FilePicker access to your microphone.\nTap Settings > Permissions, and turn Microphone on.</string>
    <string name="not_now">Not Now</string>

</resources>
