<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /*
  ~  * Created by https://github.com/braver-tool on 12/10/21, 08:30 PM
  ~  * Copyright (c) 2021 . All rights reserved.
  ~  * Last modified 15/11/21, 05:50 PM
  ~  */
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="12sp"
            android:paddingEnd="12sp"
            app:cardBackgroundColor="#fff"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minWidth="@dimen/_250sdp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="@dimen/_5sdp">

                    <ImageView
                        android:id="@+id/permissionAlertTypeImageView"
                        android:layout_width="@dimen/_24sdp"
                        android:layout_height="@dimen/_24sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_2sdp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_permission_storage"
                        android:theme="@style/RippleEffectTheme" />

                    <TextView
                        android:id="@+id/permissionAlertContentTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:fontFamily="@font/courgette"
                        android:gravity="center"
                        android:lineSpacingExtra="@dimen/_2sdp"
                        android:paddingStart="@dimen/_2sdp"
                        android:paddingTop="@dimen/_5sdp"
                        android:paddingEnd="@dimen/_2sdp"
                        android:paddingBottom="@dimen/_5sdp"
                        android:text="@string/camera_video_permission"
                        android:textColor="@color/app_color_dark"
                        android:textSize="@dimen/_13sdp"
                        android:textStyle="normal" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/permissionAlertNotNowTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:background="@drawable/preview_btn_bg"
                        android:fontFamily="@font/alegreya_sans_sc_bold"
                        android:gravity="center"
                        android:padding="10sp"
                        android:text="@string/not_now"
                        android:textColor="@color/grey"
                        android:textSize="@dimen/_12sdp" />


                    <TextView
                        android:id="@+id/permissionAlertSettingsTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:background="@drawable/alert_btn_bg"
                        android:fontFamily="@font/alegreya_sans_sc_bold"
                        android:gravity="center"
                        android:padding="10sp"
                        android:text="@string/settings_permission"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12sdp" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>
